# dataset-zipcode

./: .gitignore  dataset.yml  dbt_project.yml  fdl.toml  main.py  packages.yml  profiles.yml  pyproject.toml
.github/workflows/: checkpoint.yml  deploy.yml  sync.yml
models/main/mart/: mart_zipcode.yml
models/main/raw/: raw_zipcode.sql
scripts/: build.sh  upload_artifacts.py  upload_metadata.py
