[project]
name = "dataset-zipcode"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11.2",
    "dbt-duckdb>=1.10.0",
    "duckdb==1.5.2",
    "boto3>=1.35",
]

[tool.queria]
name = "zipcode"
title = "郵便番号データ"
description = "日本郵便が公開している全国の郵便番号データ"
cover = "📮"
tags = ["郵便番号", "住所", "日本郵便"]
license = "自由利用（日本郵便）"
license_url = "https://www.post.japanpost.jp/zipcode/dl/utf-readme.html"
repository_url = "https://github.com/flo8s/dataset-zipcode"
schedule = "monthly"

[tool.queria.schemas.main]
title = "メイン"
